# prep-cli

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Doxyfile.in  FindPrep.cmake  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac  cppm.conf  cpppm.conf  docker-compose.yml  package.json  prep.rb  reconfigure
examples/hello_curses/: CMakeLists.txt  hello.c  package.json
man/: CMakeLists.txt  prep-config.5.md  prep-package.5  prep-plugin.7  prep-plugin.7.md  prep.1  prep.1.md  template.md
package/DEBIAN/: control
src/: CMakeGenerateSource.txt  CMakeLists.txt  Makefile.am  Makefile.in  argument_resolver.cpp  argument_resolver.h  common.h  config.h.in  controller.cpp  controller.h  decompressor.cpp  decompressor.h  environment.cpp  environment.h  exception.h  log.cpp  log.h  main.cpp  options.h  package.cpp  package.h  package_builder.cpp  package_builder.h  package_config.cpp  package_config.h  package_dependency.cpp  package_resolver.cpp  package_resolver.h  plugin.cpp  plugin.h  plugin_manager.cpp  plugin_manager.h  plugins_archive.cpp.in  plugins_archive.h  repository.cpp  repository.h  util.cpp  util.h  vt100.cpp  vt100.h
src/plugins/: CMakeLists.txt
src/plugins/archive/: main  main.go  manifest.json
src/plugins/arg3/prep/: plugin.pm
src/plugins/autotools/: main
src/plugins/cmake/: main  manifest.json
src/plugins/git/: main
src/plugins/homebrew/: homebrew  main  manifest.json
src/plugins/init/: main  manifest.json
src/plugins/make/: main  manifest.json
src/plugins/support/: CMakeLists.txt  cpan_modules.txt  main  manifest.json  plugin.go
src/plugins/support/micrantha/prep/: plugin.pm
src/plugins/support/rj/prep/: plugin.pm
tests/: CMakeLists.txt  main.test.cpp  package.json  util.test.cpp
tests/data/io_plugin/: main
util/: CMakeLists.txt  bin2csv  bin2csv.c  bin2csv.cpp  plugins.inc
